# libxfce4ui-nocsd

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac.in  configure.in.in  libxfce4ui.spec.in  module.xml
docs/: Makefile.am  libxfce4ui-docs.sgml  libxfce4ui-docs.xml  libxfce4ui-sections.txt  libxfce4ui.types
docs/reference/: Makefile.am  libxfce4ui-docs.xml  libxfce4ui-sections.txt  libxfce4ui.types
docs/tmpl/: libxfce4ui-config.sgml  libxfce4ui-unused.sgml  xfce-dialogs.sgml  xfce-execute.sgml  xfce-gdk-extensions.sgml  xfce-gtk-extensions.sgml  xfce-pango-extensions.sgml  xfce-sm-client.sgml  xfce-spawn.sgml  xfce-titled-dialog.sgml
glade/: Makefile.am  libxfce4ui-2.xml.in  libxfce4ui-glade.c  libxfce4ui.xml.in
glade/icons/: Makefile.am
glade/icons/16x16/: Makefile.am
glade/icons/22x22/: Makefile.am
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libxfce4kbd-private/: Makefile.am  libxfce4kbd-private-2.pc.in  libxfce4kbd-private-3.pc.in  xfce-shortcut-dialog.c  xfce-shortcut-dialog.h  xfce-shortcuts-grabber.c  xfce-shortcuts-grabber.h  xfce-shortcuts-provider.c  xfce-shortcuts-provider.h  xfce-shortcuts-xfwm4.c  xfce-shortcuts-xfwm4.h  xfce-shortcuts.c  xfce-shortcuts.h  xfce4-keyboard-shortcuts.xml  xfwm4-shortcut-values.h
libxfce4smclient-private/: Makefile.am  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-osx.c  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  libxfce4smclient-private-1.pc.in
libxfce4ui/: Makefile.am  abicheck.sh  libxfce4ui-1.pc.in  libxfce4ui-2.0.deps  libxfce4ui-2.0.metadata  libxfce4ui-2.pc.in  libxfce4ui-2.vapi  libxfce4ui-config.c  libxfce4ui-config.h.in  libxfce4ui-dialog-ui.ui  libxfce4ui-marshal.list  libxfce4ui-private.h  libxfce4ui.gresource.xml  libxfce4ui.h  libxfce4ui.symbols  make-libxfce4ui-alias.pl  xfce-dialogs.c  xfce-dialogs.h  xfce-execute.c  xfce-execute.h  xfce-filename-input.c  xfce-filename-input.h  xfce-gdk-extensions.c  xfce-gdk-extensions.h  xfce-gtk-extensions.c  xfce-gtk-extensions.h  xfce-heading.c  xfce-heading.h  xfce-pango-extensions.c  xfce-pango-extensions.h  xfce-session-client.c  xfce-session-client.h  xfce-sm-client.c  xfce-sm-client.h  xfce-spawn.c  xfce-spawn.h  xfce-titled-dialog.c  xfce-titled-dialog.h
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  ku.po  libxfce4ui.pot  (+33 more)
python-example/: test-introspection.py
tests/: Makefile.am  test-ui.c
xfce4-about/: Makefile.am  contributors.h  main.c  system-info.c  system-info.h  translators.h  xfce4-about-dialog.glade  xfce4-about.desktop.in
