# $Id$

INCLUDES = \
	-I$(top_srcdir) \
	-DDATADIR=\"$(datadir)\" \
	-DSN_API_NOT_YET_FROZEN \
	-DLIBXFCE4UI_COMPILATION \
	-DG_LOG_DOMAIN=\"libxfce4ui\" \
	-DLIBEXECDIR=\"$(libexecdir)\" \
	-DLIBXFCE4UI_VERSION_API=\"$(LIBXFCE4UI_VERSION_API)\" \
	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
	$(PLATFORM_CPPFLAGS)

lib_LTLIBRARIES = libxfce4ui-1.la

libxfce4ui_headers = \
	xfce-dialogs.h \
	xfce-gdk-extensions.h \
	xfce-gtk-extensions.h \
  xfce-spawn.h \
	xfce-titled-dialog.h

libxfce4ui_built_sources = \
	libxfce4ui-alias.h \
	libxfce4ui-aliasdef.c

libxfce4ui_includedir = \
	$(includedir)/libxfce4ui-1/libxfce4ui

libxfce4ui_include_HEADERS = \
	$(libxfce4ui_headers) \
	libxfce4ui.h \
	libxfce4ui-config.h

libxfce4ui_1_la_SOURCES = \
	$(libxfce4uiinclude_HEADERS) \
	$(libxfce4ui_built_sources) \
	libxfce4ui-config.c \
	libxfce4ui-private.h \
	xfce-dialogs.c \
	xfce-gdk-extensions.c \
	xfce-gtk-extensions.c \
	xfce-heading.c \
	xfce-heading.h \
	xfce-spawn.c \
	xfce-titled-dialog.c

libxfce4ui_1_la_CFLAGS = \
	$(GTK_CFLAGS) \
	$(LIBSTARTUP_NOTIFICATION_CFLAGS) \
	$(LIBXFCE4UTIL_CFLAGS) \
	$(PLATFORM_CFLAGS)

libxfce4ui_1_la_LDFLAGS = \
	-version-info $(LIBXFCE4UI_VERINFO) \
	-export-symbols-regex "^[^_].*" \
	-no-undefined \
	$(PLATFORM_LDFLAGS)

libxfce4ui_1_la_LIBADD = \
	$(GTK_LIBS) \
	$(LIBSTARTUP_NOTIFICATION_LIBS) \
	$(LIBXFCE4UTIL_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libxfce4ui-1.pc


##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES = \
	actual-abi \
	expected-abi

DISTCLEANFILES = \
	stamp-libxfce4ui-marshal.h \
	$(libxfce4ui_built_sources)

BUILT_SOURCES = \
	$(libxfce4ui_built_sources)

if HAVE_GNUC_VISIBILITY
TESTS = \
	abicheck.sh
endif

libxfce4ui-alias.h: make-libxfce4ui-alias.pl libxfce4ui.symbols
	$(PERL) $(srcdir)/make-libxfce4ui-alias.pl < $(srcdir)/libxfce4ui.symbols > libxfce4ui-alias.h

libxfce4ui-aliasdef.c: make-libxfce4ui-alias.pl libxfce4ui.symbols
	$(PERL) $(srcdir)/make-libxfce4ui-alias.pl -def < $(srcdir)/libxfce4ui.symbols > libxfce4ui-aliasdef.c
endif

# required for gtk-doc
dist-hook: all

EXTRA_DIST = \
	abicheck.sh \
	libxfce4ui.symbols \
	libxfce4ui-alias.h \
	libxfce4ui-aliasdef.c \
	make-libxfce4ui-alias.pl

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
